--- a/JiaoBaoYun-hb/html/mine/qun_data_create.html
+++ b/JiaoBaoYun-hb/html/mine/qun_data_create.html
@@ -455,7 +455,7 @@
 					if(data.RspCode == 0) {
 						mui.toast('资料添加成功！');
 						console.log('资料添加成功！');
-						events.fireToPageNone('qun_manage_1.html', 'addData', {
+						events.fireToPageNone('qun_manage_a.html', 'addData', {
 							stuid: data.RspData,
 							gid: mainData.gid,
 							stuname: name,
