--- a/JiaoBaoYun-hb/html/mine/qun_manage_info.html
+++ b/JiaoBaoYun-hb/html/mine/qun_manage_info.html
@@ -328,7 +328,7 @@
 				 * 创建群后修改界面
 				 */
 				function changInfo(data) {
-					events.fireToPageNone('qun_manage_1.html', 'createQun', data);
+					events.fireToPageNone('qun_manage_a.html', 'createQun', data);
 					events.fireToPageNone('../cloud/cloud_home.html', 'getGroupList');
 				}
 
