--- a/JiaoBaoYun-hb/html/index/mine.html
+++ b/JiaoBaoYun-hb/html/index/mine.html
@@ -64,7 +64,7 @@
 							<img src="../../image/mine/my-points.png" class="mine-icon"></img> 积分
 						</a>
 					</li>
-					
+
 					<li class="mui-table-view-divider"></li>
 					<li class="mui-table-view-cell" position='6'>
 						<a class="mui-navigate-right">
@@ -145,12 +145,12 @@
 
 					switch(parseInt(this.getAttribute('position'))) {
 						case 0: //群管理
-							events.openNewWindowWithData('/html/mine/qun_manage_1.html', {
+							events.openNewWindowWithData('/html/mine/qun_manage_a.html', {
 								type: '0' //0群管理,1人员资料
 							});
 							break;
 						case 1: //人员资料
-							events.openNewWindowWithData('/html/mine/qun_manage_1.html', {
+							events.openNewWindowWithData('/html/mine/qun_manage_a.html', {
 								type: '1' //0群管理,1人员资料
 							});
 							break;
@@ -173,7 +173,7 @@
 							//积分
 						case 5:
 							mui.toast('积分功能暂未开放！');
-							
+
 							break;
 							//设置
 						case 6:
