修改弹出框界面 关闭全部群成员退群功能

--- a/JiaoBaoYun-hb/html/mine/approval-apply.html
+++ b/JiaoBaoYun-hb/html/mine/approval-apply.html
@@ -29,7 +29,7 @@
 				</ul>
 			</div>
 		</div>
-		<div id="chose-roles" class="mui-popover center-popover">
+		<div id="chose-roles" class="mui-popover center-popover" style="top: 30%;">
 			<div class="pop-title">
 				<div class="title-left"></div>
 				<div class="title-middle">请选择身份</div>
