--- a/JiaoBaoYun-hb/html/quan/class-group.html
+++ b/JiaoBaoYun-hb/html/quan/class-group.html
@@ -31,7 +31,7 @@
 
 				</ul>
 				<div id="show-all" class="more-container display-none" style="background-color: white;">
-					<p>查看全部群成员<span class="mui-icon mui-icon-arrowright more-arrow"></span></p>
+					<p class="show-all-words">查看全部群成员<span class="mui-icon mui-icon-arrowright more-arrow"></span></p>
 				</div>
 				<div style="width: 100%;background-color: #E4E4E4;height: 1px;margin-top: -10px;"></div>
 				<ul class="mui-table-view" style="margin-top: 20px;background-color: white;">
@@ -59,15 +59,15 @@
 			<div class="group-choose">
 				<form class="mui-input-group">
 					<div class="mui-input-row mui-radio mui-left">
-						<label class="mui-ellipsis">邀请[家长]入群</label>
+						<label class="parents-label mui-ellipsis">邀请[家长]入群</label>
 						<input id="check-parents" name="radio1" type="radio" value="0">
 					</div>
 					<div class="mui-input-row mui-radio mui-left">
-						<label class="mui-ellipsis">邀请[老师]入群</label>
+						<label class="tea-label mui-ellipsis">邀请[老师]入群</label>
 						<input id="check-tea" name="radio1" type="radio" value="2">
 					</div>
 					<div class="mui-input-row mui-radio mui-left">
-						<label class="mui-ellipsis">邀请[学生]入群</label>
+						<label class="stu-label mui-ellipsis">邀请[学生]入群</label>
 						<input id="check-stu" name="radio1" type="radio" value="3">
 					</div>
 				</form>
