--- a/JiaoBaoYun-hb/html/mine/apply-group.html
+++ b/JiaoBaoYun-hb/html/mine/apply-group.html
@@ -49,20 +49,20 @@
 				<span id="btn-cancle" class="title-right iconfont icon-guanbi1"></span>
 			</div>
 			<p class="pop-hint">请选择身份</p>
-			<div class="chose-container">
-				<div class="div-chose">
-					<input id="check-parents" name="checkbox1" type="radio" value="0">
-					<label>家长</label>
+			<form class="mui-input-group chose-container">
+				<div class="mui-input-row mui-radio mui-left display-inlineBlock">
+					<label class="parents-label mui-ellipsis">家长</label>
+					<input id="check-parents" name="radio1" type="radio" value="0">
 				</div>
-				<div class="div-chose">
-					<input id="check-tea" name="checkbox1" type="radio" value="2">
-					<label>老师</label>
+				<div class="mui-input-row mui-radio mui-left display-inlineBlock">
+					<label class="tea-label mui-ellipsis">老师</label>
+					<input id="check-tea" name="radio1" type="radio" value="2">
 				</div>
-				<div class="div-chose">
-					<input id="check-stu" name="checkbox1" type="radio" value="3">
-					<label>学生</label>
+				<div class="mui-input-row mui-radio mui-left display-inlineBlock">
+					<label class="stu-label mui-ellipsis">学生</label>
+					<input id="check-stu" name="radio1" type="radio" value="3">
 				</div>
-			</div>
+			</form>
 			<textarea id="extra-input" class="extra-input" placeholder="请输入备注信息，最多20字"></textarea>
 			<div class="buttons">
 				<button id="btn-sure" type="button" class="mui-btn mui-btn-green btn-sure">确认</button>
