--- a/JiaoBaoYun-hb/html/cloud/cloud_home.html
+++ b/JiaoBaoYun-hb/html/cloud/cloud_home.html
@@ -204,7 +204,7 @@
 					<div class="mui-media-body" id="titleFlag2" style="color: #323232;">晒一晒</div>
 				</li>
 
-				<li id="aboutme" class="mui-table-view-cell mui-media " style="height: 50px;">
+				<li id="aboutme" class="mui-table-view-cell mui-media ">
 					<img class="mui-media-object mui-pull-left" style="width: 20px ;height: 20px;" src="../../image/quan/aboutme.png" />
 					<div class="mui-media-body  mui-pull-left" id="titleFlag2" style="color: #323232;margin-top: -10px;padding-top: 10px;"><span class="mui-pull-left">与我相关</span><span id="aboutme_noRead" class="mui-badge mui-badge-danger mui-pull-left" style="margin-left: 0px;margin-top: -5px;visibility: hidden;"></span></div>
 				</li>
