--- a/JiaoBaoYun-hb/html/quan/group-pInfo.html
+++ b/JiaoBaoYun-hb/html/quan/group-pInfo.html
@@ -50,9 +50,9 @@
 					</a>
 				</li>-->
 				<li class="mui-table-view-cell">
-					<a class="" style="margin-right: 5px;">
-							<p class="info-remark">地区</p>
-						<span id="person-area" class="mui-badge person-space">青岛</span>
+					<a class="" style="">
+							<p class="info-remark ">地区</p>
+						<span id="person-area" class="mui-badge person-space area-container">青岛</span>
 					</a>
 				</li>
 			</ul>
