--- a/JiaoBaoYun-hb/html/qiuzhi/expert-ask.html
+++ b/JiaoBaoYun-hb/html/qiuzhi/expert-ask.html
@@ -105,8 +105,6 @@
 				line-height: 21px;
 				font-weight: 510;
 				padding-left: 0px;
-				
-				
 				/*line-height: 21px;
 				font-weight: 510;
 				padding-left: 10px;
@@ -209,6 +207,10 @@
 		mui('.mui-table-view').on('tap', '.mui-table-view-cell', function() {
 			var index = this.id.replace('li', '');
 			var modelTemp = datasource[index];
+			//判断回答或则问题是否还存在,flag=1为提问，=2为回答，id为对应id
+			if(events.askDetailOrAnswerDetail(1, modelTemp.AskId)) {
+				return;
+			}
 			//跳转界面
 			events.openNewWindowWithData('qiuzhi-question.html', {
 				askID: modelTemp.AskId, //问题id
