求知问题 和 求知回答  如果不存在 返回上级界面

--- a/JiaoBaoYun-hb/html/index/mine.html
+++ b/JiaoBaoYun-hb/html/index/mine.html
@@ -21,7 +21,7 @@
 				<div id="title" class="title">
 					<img id="uimg" style="height: 60px;width: 60px;" src="../../image/utils/default_personalimage.png" class="head-portrait" /><br />
 					<h4 id="uname">暂无昵称</h4>
-					<p id="utext">暂无签名</p>
+					<p id="utext" style="word-wrap: break-word;">暂无签名</p>
 				</div>
 
 				<!--各项-->
