调整下拉刷新控件

--- a/JiaoBaoYun-hb/html/quan/studentdynamic_main.html
+++ b/JiaoBaoYun-hb/html/quan/studentdynamic_main.html
@@ -234,7 +234,7 @@
 						console.log('down ' + JSON.stringify(page));
 						getNotes(1);
 						setTimeout(function() {
-							self.endPullDownToRefresh(); //结束下拉刷新
+							pullRefresh.endPullDownToRefresh(); //结束下拉刷新
 						}, 1000);
 					}
 				},
