--- a/JiaoBaoYun-hb/html/homework/homework-publish.html
+++ b/JiaoBaoYun-hb/html/homework/homework-publish.html
@@ -48,7 +48,7 @@
 					<a id="select-classes" class="select-classes mui-icon mui-icon-arrowright"></a>
 				</div>
 				<div class="input-erea">
-					<textarea id="publish-content" class="publish-content" type="text" maxlength="500" placeholder="输入你要布置的作业内容,最多500字！"></textarea>
+					<textarea id="publish-content" class="publish-content"  maxlength="500" placeholder="输入你要布置的作业内容,最多500字！"></textarea>
 					<!--一期隐藏拍照、相机、录音功能-->
 					<div class="publish-extras">
 						<!--<a id="getRecord" class="mui-icon iconfont icon-yuyin"></a>-->
@@ -70,7 +70,7 @@
 			</form>
 			</div>
 		</div>
-		<div id="play" class="rp">
+		<!--<div id="play" class="rp">
 			<div id="ptime" class="ptime">00:00:00/00:00:00</div><br/>
 			<div id="progress" class="progress">
 				<div id="schedule" class="schedule"></div>
@@ -90,7 +90,7 @@
 			<div class="stop" onclick="stopRecord()">
 				<a class="mui-icon iconfont icon-tingzhi"></a>
 			</div>
-		</div>
+		</div>-->
 		<!--mui库-->
 		<script src="../../js/mui.min.js"></script>
 		<!--公共事件模块-->
@@ -101,16 +101,15 @@
 		<script type="text/javascript" src="../../js/utils/compress.js"></script>
 		<script src="../../js/utils/cryption.js"></script>
 		<script src="../../js/utils/CloudFileUtil.js"></script>
-		<script src="../../js/common.js"></script>
+		<!--<script src="../../js/common.js"></script>-->
 		<script src="../../js/mui.zoom.js"></script>
 		<script src="../../js/mui.previewimage.js"></script>
 		<!--录音模块-->
-		<script src="../../js/utils/audio.js"></script>
+	<!--	<script src="../../js/utils/audio.js"></script>-->
 		<!--协议-->
 		<script src="../../js/publicHomeworkProtocol.js" type="text/javascript" charset="utf-8"></script>
 		<script src="../../js/publicProtocol.js" type="text/javascript" charset="utf-8"></script>
 		<!--共用参数-->
-		<script src="../../js/storageKeyName.js" type="text/javascript" charset="utf-8"></script>
 		<script src="../../js/homework/homework-publish.js"></script>
 	</body>
 
