调整人员资料和点到记事逻辑

--- a/JiaoBaoYun-hb/html/cloud/keeprecord_callorrecord_main.html
+++ b/JiaoBaoYun-hb/html/cloud/keeprecord_callorrecord_main.html
@@ -459,7 +459,7 @@
 			 * }
 			 */
 			function addNotes(type, parentIds, userIds, data, wd, callback) {
-				var publisherName = '【' + personal.utid + '老师】【' + mainData.gname + '】' //发布者姓名
+				var publisherName = '【' + personal.unick + '老师】【' + mainData.gname + '】' //发布者姓名
 				var noteType = type; //点到记事类型1点到2记事
 				var checkType = ''; //点到类型
 				var msgContent = ''; //内容
