订购会员界面

--- a/JiaoBaoYun-hb/html/cloud/order-member.html
+++ b/JiaoBaoYun-hb/html/cloud/order-member.html
@@ -19,17 +19,18 @@
 		<div id="refreshContainer" class="mui-content mui-scroll-wrapper">
 			<div class="mui-scroll">
 				<div class="personInfo-container">
-
+					<p class="display-inlineBlock"><img class="head-portrait display-inlineBlock" src="../../image/utils/default_personalimage.png" />冰糖馨儿</p>
 				</div>
-				<div id="slider" class="mui-slider">
-					<div id="sliderSegmentedControl" class="mui-slider-indicator mui-segmented-control">
-						<a class="mui-control-item mui-active" href="#item1mobile">
+				<div id="slider" class="mui-slider deal-choose-container">
+					<div id="sliderSegmentedControl" class="mui-slider-indicator mui-segmented-control normal-super">
+						<a class="mui-control-item mui-active" href="#normal-deal">
 							普通会员
 						</a>
-						<a class="mui-control-item" href="#item2mobile">
+						<a class="mui-control-item" href="#super-deal">
 							超级会员
 						</a>
 					</div>
+					<div class="across-line"></div>
 					<!--<div id="sliderProgressBar" class="mui-slider-progress-bar mui-col-xs-6"></div>-->
 					<div class="mui-slider-group">
 						<div id="normal-deal" class="mui-slider-item mui-control-content mui-active">
@@ -64,9 +65,49 @@
 				</div>
 				<!--权益-->
 				<div class="privilege-container">
-
+					<div class="privilege-head">会员特权</div>
+					<div class="across-line"></div>
+					<ul class="mui-table-view mui-grid-view mui-grid-9">
+					<li class="mui-table-view-cell mui-media mui-col-xs-6 mui-col-sm-6">
+					    <a href="#">
+					        <span class="mui-icon mui-icon-home display-inlineBlock"></span>
+					        <p class=" display-inlineBlock">存储增加2T超大空间</p>
+					    </a>
+					</li>
+					<li class="mui-table-view-cell mui-media mui-col-xs-6 mui-col-sm-6">
+					    <a href="#">
+					        <span class="mui-icon mui-icon-email display-inlineBlock"><span class="mui-badge mui-badge-red">5</span></span>
+					        <p class="display-inlineBlock">群人数增加至500人</p>
+					    </a>
+					</li>
+					<li class="mui-table-view-cell mui-media mui-col-xs-6 mui-col-sm-6">
+					    <a href="#">
+					        <span class="mui-icon mui-icon-chatbubble display-inlineBlock"></span>
+					        <p class=" display-inlineBlock">科教增加文化、科技新闻</p>
+					    </a>
+					</li>
+					<li class="mui-table-view-cell mui-media mui-col-xs-6 mui-col-sm-6">
+					    <a href="#">
+					        <span class="mui-icon mui-icon-location display-inlineBlock"></span>
+					        <p class="display-inlineBlock">允许发布动态至展现</p>
+					    </a>
+					</li>
+					<li class="mui-table-view-cell mui-media mui-col-xs-6 mui-col-sm-6">
+					    <a href="#">
+					        <span class="mui-icon mui-icon-search display-inlineBlock"></span>
+					        <p class="display-inlineBlock">求知每天可邀请专家50人</p>
+					    </a>
+					</li>
+					<li class="mui-table-view-cell mui-media mui-col-xs-6 mui-col-sm-6">
+					    <a href="#">
+					        <span class="mui-icon mui-icon-phone display-inlineBlock"></span>
+					        <p class="display-inlineBlock">增加积分功能</p>
+					    </a>
+					</li>
+					    </ul>
+					
 				</div>
-				<ul class="mui-table-view">
+				<ul class="mui-table-view extra-container">
 					<li class="mui-table-view-cell">
 						<a class="mui-navigate-right">
 							积分兑换
@@ -80,8 +121,8 @@
 				</ul>
 				<!--开通说明-->
 				<div>
-					<h6>开通说明</h6>
-					<ul>
+					<h6 class="info-intro">开通说明</h6>
+					<ul class="info-words">
 						<li>开通后5分钟内生效</li>
 						<li>购买后若无法正常使用，可稍候重试，或重启APP解决</li>
 						<li>若有疑问，可联系教宝云客服(8:30-17：30)</li>
