--- a/JiaoBaoYun-hb/html/mine/qun_manage_info_change_post.html
+++ b/JiaoBaoYun-hb/html/mine/qun_manage_info_change_post.html
@@ -20,15 +20,19 @@
 				border: none;
 				border-bottom: 1px solid #00A5E0;
 				border-radius: initial;
-				margin-left: 1%;
-				width: 98%;
-				padding-left: 10px;
-				padding-right: 20px;
 			}
 
 			#input_num {
 				position: absolute;
 				right: 10px;
+				text-align: justify;
+			}
+
+			.text-area {
+				margin-left: 1%;
+				width: 98%;
+				padding-left: 10px;
+				padding-right: 10px;
 			}
 		</style>
 	</head>
@@ -42,12 +46,21 @@
 		<div class="mui-content">
 			<div class="mui-input-row">
 				<p id="input_num">&nbsp;</p>
-				<input id="input" type="text">
+				<!--<input id="input" type="text">-->
+				<textarea id="input" type="text" rows="1" class="text-area"></textarea>
+				<div class="text-area" style="font-size: 17px;visibility:;font-family: 'Helvetica Neue', Helvetica, sans-serif;">
+					<div id="text_div">十</div>
+				</div>
 			</div>
 		</div>
 		<script type="text/javascript">
 			mui.init();
-			document.getElementById("input_num").style.top = document.getElementById("input").offsetHeight - document.getElementById("input_num").offsetHeight + 'px';
+			var rows = 1; //行数
+			var text_height; //文本高度
+			var input_num = document.getElementById("input_num");
+			var text_div = document.getElementById("text_div");
+			text_height = text_div.offsetHeight;
+			input_num.style.top = document.getElementById("input").offsetHeight - document.getElementById("input_num").offsetHeight + 'px';
 			mui.plusReady(function() {
 				events.blurBack();
 				//---从父页面获取数据---start---
@@ -77,12 +90,27 @@
 				document.getElementById('input').maxLength = maxLength;
 				document.getElementById("input").placeholder = document.getElementById("title").innerText + ',最多' + maxLength + '字';
 				document.getElementById("input").value = subData.value;
-				document.getElementById("input_num").innerText = maxLength - subData.value.length;
+				input_num.innerText = maxLength - subData.value.length;
 
 				document.getElementById('input').addEventListener('input', function() {
-//					var value = this.value.replace(/\r|\n/g, '');
-//					this.value = value;
-					document.getElementById("input_num").innerText = maxLength - this.value.length;
+					console.log('input');
+					var value = this.value.replace(/\r|\n/g, '');
+					this.value = value;
+					text_div.innerText = value;
+					var height_1 = text_div.offsetHeight;
+					console.log('text_height ' + text_height);
+					console.log('height_1 ' + height_1);
+					if(text_height >= height_1) {
+						rows = 1;
+						this.rows = 1;
+					} else if(text_height < height_1) {
+						rows = parseInt(height_1 / text_height);
+						this.rows = rows;
+					}
+
+					input_num.innerText = maxLength - this.value.length;
+					input_num.style.top = document.getElementById("input").offsetHeight - document.getElementById("input_num").offsetHeight + 'px';
+
 				});
 				document.getElementById('save').addEventListener('tap', function() {
 					var vvl = document.getElementById("input").value;
@@ -138,10 +166,9 @@
 							});
 							mui.back();
 						}
-
 					}
 				});
-			})
+			});
 		</script>
 	</body>
 
