--- a/JiaoBaoYun-hb/html/cloud/order-member.html
+++ b/JiaoBaoYun-hb/html/cloud/order-member.html
@@ -30,7 +30,7 @@
 							超级会员
 						</a>
 					</div>
-					<div class="across-line"></div>
+					<div class="across-line deal-line"></div>
 					<!--<div id="sliderProgressBar" class="mui-slider-progress-bar mui-col-xs-6"></div>-->
 					<div class="mui-slider-group">
 						<div id="normal-deal" class="mui-slider-item mui-control-content mui-active">
