--- a/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-answerDetailSub.html
+++ b/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-answerDetailSub.html
@@ -54,14 +54,10 @@
 				</div>
 				<!--评论列表-->
 				<ul id="list-container" class="mui-table-view">
-					<li class="mui-table-view-cell">
-						<div class="table-view-cell"><div class="comments-cell"><div class="img-container"><img class="head-img" src="http://oigr7qsvz.bkt.clouddn.com/headimge2.png?1488177190317"/></div><div class="comment-container"><h5 class="comment-personName single-line">酆·克瑞斯法兰克斯·斯特洛夫斯基·帕加洛</h5></div><div class="support-container"> <a class="mui-icon iconfont icon-support ">0</a></div></div><p class="comment-words">花自飘零水自流，不是眉头是心头</p><p class="comment-date">03-29 08:32</p></div> at js/qiuzhi/qiuzhi-answerDetailSub.js:459
-
-					</li>
 				</ul>
-				<div class="answer-noComment display-none" style="width: 100%;min-height: 200px;text-align: center;background-color: white;padding: 20px 0;">
+				<div class="answer-noComment display-none" style="width: 100%;min-height: 200px;text-align: center;background-color: white;padding: 20px 0;display: none;">
 					<img src="../../image/qiuzhi/qiuzhi_noanswer.png" style="max-width: 50%; height: auto;" />
-					<p>暂无人提交评论此问题，快来评论吧~~</p>
+					<p>暂无评论，快来评论吧~~</p>
 				</div>
 			</div>
 
